[tool.poetry]
name = "palantir-sdk"
version = "0.0.0"  # placeholder, updated by git describe during publish
description = "Palantir Python SDK"
license = "Apache-2.0"
authors = ["Matthew Bayer <matthewbayer@palantir.com>", "Andrew Higgins <ahiggins@palantir.com>"]
packages = [{include = "foundry"}]
include = ["foundry/_version.py"]
homepage = "https://github.com/palantir/palantir-python-sdk"

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
conjure-python-client = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
tox = "^3.24.5"
mypy = "^0.981"
requests = "^2.7.0"
types-requests = "^2.27.11"
types-python-dateutil = "^2.8.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
