[tool.poetry]
name = "palantir-sdk"
version = "0.0.0"  # placeholder, updated by git describe during publish
description = "Palantir Python SDK"
license = "Apache-2.0"
authors = ["Andrew Higgins <ahiggins@palantir.com>"]
packages = [{include = "palantir"}]
include = ["palantir/_version.py"]
homepage = "https://github.com/palantir/palantir-python-sdk"

[tool.poetry.dependencies]
python = "^3.8"
tomli = "^2.0.1"
conjure-python-client = "^2.1.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
expects = "^0.9.0"
mockito = "^1.3.0"
pandas = "^1.5.3"
pytest = "^7.0.1"
pytest-mockito = "^0.0.4"
tox = "^4.5.1"
mypy = "^0.981"
pylint = "^2.12.2"
pyarrow = ">=12,<15"
types-requests = "^2.27.11"
types-python-dateutil = "^2.8.9"
pytest-html = "^3.2.0"

[tool.poetry.group.test.dependencies]
black = ">=23.3,<25.0"
expects = "^0.9.0"
mockito = "^1.3.0"
pytest = "^7.0.1"
pytest-mockito = "^0.0.4"
tox = "^4.5.1"
mypy = "^0.981"
pylint = "^2.12.2"
pyarrow = ">=12,<15"
types-requests = "^2.27.11"
types-python-dateutil = "^2.8.9"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
